tests/baselines/reference/promiseDefinitionTest(target=es2015).errors.txt
promiseDefinitionTest.ts(1,7): error TS2300: Duplicate identifier 'Promise'.


==== promiseDefinitionTest.ts (1 errors) ====
    class Promise<T> {}
          ~~~~~~~
!!! error TS2300: Duplicate identifier 'Promise'.
!!! related TS6203 lib.es5.d.ts:--:--: 'Promise' was also declared here.
!!! related TS6204 lib.es2015.iterable.d.ts:--:--: and here.
!!! related TS6204 lib.es2015.promise.d.ts:--:--: and here.
!!! related TS6204 lib.es2015.symbol.wellknown.d.ts:--:--: and here.
    async function foo() {}
    const x = foo();
    